--- a/public/css/octopus_custom/layout.css
+++ b/public/css/octopus_custom/layout.css
@@ -11,12 +11,12 @@
 
 /* Yellow */
 .custom-secondary{
-    background-color: #ffc107;
-    color:#fff
+    background-color: #ffc107  !important;
+    color:black !important;
 }
 
 .custom-secondary-text{
-    color: #ffc107;
+    color: #ffc107 !important;
 }
 
 
