--- a/public/css/rtl.css
+++ b/public/css/rtl.css
@@ -82,6 +82,125 @@
 font-family: 'Amiri', serif !important;
     }
 
- 
+    .side-nav.fixed {
+        right: 0 !important;
+        
+    }
     
-    
+
+    .fixed-sn .double-nav, .fixed-sn footer, .fixed-sn main {
+        padding-right: 15rem !important;
+    }
+    .fixed-sn .double-nav, .fixed-sn footer, .fixed-sn main {
+        padding-left: unset !important;
+    }
+
+
+    .side-nav ul {
+        list-style: none !important;
+        padding-right: 0 !important;
+        padding-left: unset !important;
+
+    }
+
+    .side-nav a {
+        display: block;
+        font-size: 1rem;
+        height: 56px;
+        line-height: 56px;
+        padding-right: 20px  !important;
+    }
+
+
+
+    @media (max-width: 1440px)
+{
+.fixed-sn .double-nav, .fixed-sn footer, .fixed-sn main {
+    padding-right: 0 !important;
+}
+}
+
+
+
+
+
+
+.intl-tel-input .selected-flag .iti-arrow {
+    margin-right: 6px !important;
+    width: 0; 
+    height: 0;
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+    border-top: 4px solid #555;
+}
+ul.stepper .step-title {
+    margin: 0 1.3rem !important;
+    cursor: pointer;
+    padding: 0.9688rem 2.75rem 1.5rem 4rem;
+    display: block;
+}
+
+@media only screen and (max-width: 1440px)
+{
+.side-nav.fixed.right-aligned {
+    -webkit-transform: translateX(105%);
+    -ms-transform: translateX(105%);
+    transform: translateX(105%);
+}
+}
+.side-nav.fixed.right-aligned {
+    right: 0;
+    right: auto !important;
+}
+.side-nav.fixed {
+    right: 0 !important;
+}
+@media only screen and (max-width: 1440px){
+.side-nav.fixed {
+    -webkit-transform: translateX(105%);
+    -ms-transform: translateX(105%);
+    transform: translateX(105%);
+}
+}
+.side-nav.fixed {
+    right: 0;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+    position: fixed;
+}
+.side-nav.right-aligned {
+    right: 0;
+    right: auto;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    transform: translateX(100%);
+}
+.custom-primary {
+    background-color: var(--primary)!important;
+    color: var(--test)!important;
+}
+.side-nav {
+    position: fixed;
+    width: 15rem;
+    right: 0;
+    top: 0;
+    margin: 0;
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%);
+    height: 100%;
+    background-color: #2c2f34;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 1040;
+    -webkit-backface-visibility: hidden;
+    overflow: hidden;
+    will-change: transform;
+    backface-visibility: hidden;
+    list-style-type: none;
+    padding: 0;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+}
